[package]
description = "Start and stop tasks decleratively based on which tasks should run at any given moment."
edition = "2021"
keywords = ["async", "task", "future", "track", "tokio"]
license = "MIT"
name = "task-tracker"
readme = "README.md"
repository = "https://github.com/popen2/task-tracker"
version = "0.2.0"

[dependencies]
futures = "0.3.18"
hashbrown = "0.13.2"
tokio = {version = "1", features = ["sync", "rt", "macros", "time"]}
tracing = "0.1.37"
uuid = {version = "1.3.0", features = ["v4"]}

[dev-dependencies]
maplit = "1.0.2"
tracing-subscriber = "0.3.16"
